# funding-fee-farmer

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  funding-fee-farmer.service
.github/workflows/: claude-implement.yml  deploy.yml  log-analysis.yml
docs/: DESIGN.md  PROFITABILITY_ANALYSIS.md
scripts/: analyze_cross_venue.py  analyze_funding_profitability.py  analyze_hl_spot_hedge.py  deploy.sh  fetch_funding_simple.sh  fetch_historical_data.py  fetch_historical_funding.sh  fetch_multi_symbol.sh  status.sh
src/: lib.rs  main.rs
src/backtest/: data.rs  engine.rs  metrics.rs  mod.rs  runner.rs
src/config/: mod.rs
src/exchange/: client.rs  mock.rs  mod.rs  traits.rs  types.rs  websocket.rs
src/exchange/hyperliquid/: client.rs  mod.rs  types.rs
src/persistence/: mod.rs
src/risk/: funding_verifier.rs  liquidation.rs  malfunction.rs  margin.rs  mdd.rs  mod.rs  orchestrator.rs  position_tracker.rs
src/strategy/: allocator.rs  cross_venue.rs  executor.rs  mod.rs  rebalancer.rs  scanner.rs
src/utils/: decimal.rs  mod.rs
